--- a/pom.xml
+++ b/pom.xml
@@ -46,9 +46,9 @@
 			<version>2.6.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.vegardit.no-npe</groupId>
-			<artifactId>no-npe-eea-commons-lang-3</artifactId>
-			<version>1.2.0</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
 		</dependency>
 	</dependencies>
 
